@@ -1,3 +1,8 @@
+2003-11-04  Roland Mas  <99.roland.mas@aist.enst.fr>
+
+	* www/tracker/reporting/index.php: Fix highlighted tab when
+	viewing tracker reports (patch #565 from Francisco Gimeno).
+
 2003-11-04 Tom Copeland  <tom@infoether.com>
 
 	* www/survey/index.php:
